chore: update minestom and make it compile